# python-project-lvl3

./: .gitignore  Dockerfile  Makefile  README.md  coverage.xml  google-com.html  online-bloknot-ru-.html  page_loader.py  pyproject.toml  ru.hexlet.io-courses.html  setup.cfg  www-google-com-.html
google-com_files/: google-com.html
online-bloknot-ru-_files/: notepad-online-com-en-.html  notepad-online-com-fr-.html  online-bloknot-ru-.html  online-bloknot-ru-ckeditor-ckeditor.js  online-bloknot-ru-ckeditor-config.js  online-bloknot-ru-css-default.css  online-bloknot-ru-js-FileSaver.js  online-bloknot-ru-js-default.js  online-bloknot-ru-js-jquery-wordexport.js
page_loader/: __init__.py  download_asset.py  get_name.py  loader.py  parser.py
page_loader/scripts/: page_loader.py
test/: test_download.py
test/fixture/: download_asset  init-site-com-blog-about.html
test/fixture/site-com-blog-about_files/: site-com-blog-about-assets-styles.css
tests/: test_download.py
tests/fixture/: init-site-com-blog-about.html
tests/fixture/site-com-blog-about_files/: site-com-assets-scripts.js  site-com-blog-about.html
www-google-com-_files/: www-google-com-.html
