[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["grins"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
flake8 = "^3.9.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
