[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["grins"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
flake8 = "^3.9.2"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
bs4 = "^0.0.1"
progress = "^1.6"
requests-mock = "^1.9.3"
coverage = "^5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"